trying to port codepen

--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
-<!DOCTYPE html>
-<html>
-<body>
 
-<h1>Test site</h1>
-<p>Hello world.</p>
+<nav class="navbar">
+  <header class="BN">IN-TURN-ET CUBING</header>
+  <div class="navbarpoints">
+    <ul>
+      <li><a href="#">HOME</a></li>
+       <li><a href="https://codepen.io/sircrazypaper/full/OJaPmbe">ABOUT</a></li>
+      <li><a href="https://codepen.io/sircrazypaper/full/yLQYvEY">COMPETETIONS</a></li>
+      <li><a href="https://codepen.io/sircrazypaper/full/QWJyWJp">RULES</a></li>
+      <li><a href="https://codepen.io/sircrazypaper/full/ZEmbrVp">RANKINGS</a></li>
+      <li><a href="https://codepen.io/sircrazypaper/full/RwqWMbE">NEWS</a></li>
+    </ul>  
+  </div>
+</nav>
 
-</body>
-</html>
+<p>spacer</p>
+<p>spacer</p>
+
+<p style="text-align:center;">
+<img src="https://raw.githubusercontent.com/sircrazypaper/IN-TURN-ET_CUBING/main/Screenshot%202023-06-04%20at%2018.27.45.png" alt="Logo" width="600">  </p>
+
+<h class="text"><center>This is the official website for the online cubing competetion IN-TURN-ET CUBING</center></h>
+
+<p>spacer</p>
+
+<h class="text"><center>Feel free to take a look at the different sections above. Happy cubing!</center></h>
+
+<p>spacer</p>
+<p>spacer</p>
