--- a/index.html
+++ b/index.html
@@ -1,3 +1,16 @@
+<!DOCTYPE html>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
+    <title>Link CSS to HTML</title>
+</head>
+
+<html>
+<body>
+
 
 <nav class="navbar">
   <header class="BN">IN-TURN-ET CUBING</header>
@@ -9,7 +22,7 @@
       <li><a href="https://codepen.io/sircrazypaper/full/QWJyWJp">RULES</a></li>
       <li><a href="https://codepen.io/sircrazypaper/full/ZEmbrVp">RANKINGS</a></li>
       <li><a href="https://codepen.io/sircrazypaper/full/RwqWMbE">NEWS</a></li>
-    </ul>  
+    </ul>
   </div>
 </nav>
 
@@ -27,3 +40,6 @@
 
 <p>spacer</p>
 <p>spacer</p>
+
+</body>
+</html>
