--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <header class="BN">IN-TURN-ET CUBING</header>
   <div class="navbarpoints">
     <ul>
-      <li><a href="#">HOME</a></li>
-       <li><a href="https://codepen.io/sircrazypaper/full/OJaPmbe">ABOUT</a></li>
+      <li><a href="https://sircrazypaper.github.io/">HOME</a></li>
+       <li><a href="https://sircrazypaper.github.io/about.html">ABOUT</a></li>
       <li><a href="https://codepen.io/sircrazypaper/full/yLQYvEY">COMPETETIONS</a></li>
       <li><a href="https://codepen.io/sircrazypaper/full/QWJyWJp">RULES</a></li>
       <li><a href="https://codepen.io/sircrazypaper/full/ZEmbrVp">RANKINGS</a></li>
