added comps and updated css

--- a/competetions.html
+++ b/competetions.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>About</title>
+  <title>CodePen - Competetions</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -24,23 +24,33 @@
 
 <p>spacer</p>
 <p>spacer</p>
-
-<h><center>About</center></h>
-
-<p>spacer</p>
 <p>spacer</p>
 <p>spacer</p>
 
-<div class="info"><center>IN-TURN-ET CUBING is an online cubing competetion featuring 3x3 head to head battles, normal competetion style solves and other fun cubing related stuff.</center></div>
-<p>spacer</p>
-<div class="info"><center>To find out more about upcoming competetions please go to the "competions" section on this webpage.</center></div>
+<h><center>COMPETETIONS</center></h>
+
+<div class="info">
+
+  <p>spacer</p>
+  <p>spacer</p>
+
+
+
+<center>This is the page where you can find competetions and sign up for them. We will try to host a competetion every 1-3 months. Feel free to sign up for one!</center></div>
 
 <p>spacer</p>
 <p>spacer</p>
 <p>spacer</p>
 
-<p style="text-align:center;">
-<img src="https://raw.githubusercontent.com/sircrazypaper/IN-TURN-ET_CUBING/main/Screenshot%202023-06-04%20at%2018.27.45.png" alt="Logo" width="300">  </p>
+<div class="link">IN-TURN-ET CUBING I<a href="https://codepen.io/sircrazypaper/full/PoxPEEK"></div>
+
+
+
+
+   <p style="text-align:center;">
+<img src="https://raw.githubusercontent.com/sircrazypaper/IN-TURN-ET_CUBING/main/Screenshot%202023-06-04%20at%2018.27.45.png" alt="Logo" width="350">  </p>
+
+  <p>spacer</p>
 <!-- partial -->
 
 </body>
