--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <ul>
       <li><a href="https://sircrazypaper.github.io/">HOME</a></li>
        <li><a href="https://sircrazypaper.github.io/about.html">ABOUT</a></li>
-      <li><a href="https://codepen.io/sircrazypaper/full/yLQYvEY">COMPETETIONS</a></li>
+      <li><a href="https://sircrazypaper.github.io/competetions.html">COMPETETIONS</a></li>
       <li><a href="https://codepen.io/sircrazypaper/full/QWJyWJp">RULES</a></li>
       <li><a href="https://codepen.io/sircrazypaper/full/ZEmbrVp">RANKINGS</a></li>
       <li><a href="https://codepen.io/sircrazypaper/full/RwqWMbE">NEWS</a></li>
