--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
       <li><a href="https://sircrazypaper.github.io/">HOME</a></li>
        <li><a href="https://sircrazypaper.github.io/about.html">ABOUT</a></li>
       <li><a href="https://sircrazypaper.github.io/competetions.html">COMPETETIONS</a></li>
-      <li><a href="https://codepen.io/sircrazypaper/full/QWJyWJp">RULES</a></li>
+      <li><a href="https://sircrazypaper.github.io/rules.html">RULES</a></li>
       <li><a href="https://codepen.io/sircrazypaper/full/ZEmbrVp">RANKINGS</a></li>
       <li><a href="https://codepen.io/sircrazypaper/full/RwqWMbE">NEWS</a></li>
     </ul>
