--- a/rules.html
+++ b/rules.html
@@ -39,17 +39,17 @@
 
 <p>spacer</p>
 
-<div class="text">Every competitor must have a puzzle that is WCA legal for the event that they are competing in unless they are told differntly on the competetion info page.</div>
-<div class="text">  Every competitor must have an opaque box with an open side to cover the cube during scramble-checking and before inspection. Example: hard box cube packaging.</div>
-<div class="text">  Every competitor must use a speedstacks gen4, gen5, GAN, or QiYi Timer to time their results.</div>
-<div class="text">  The judge must have a device that can act as a stopwatch for timing inspection.</div>
-<div class="text">  All competitors must have good lighting so that the judge can see the difference between the colors for scramble-checking.</div>
+<div class="ruletext">Every competitor must have a puzzle that is WCA legal for the event that they are competing in unless they are told differntly on the competetion info page.</div>
+<div class="ruletext">  Every competitor must have an opaque box with an open side to cover the cube during scramble-checking and before inspection. Example: hard box cube packaging.</div>
+<div class="ruletext">  Every competitor must use a speedstacks gen4, gen5, GAN, or QiYi Timer to time their results.</div>
+<div class="ruletext">  The judge must have a device that can act as a stopwatch for timing inspection.</div>
+<div class="ruletext">  All competitors must have good lighting so that the judge can see the difference between the colors for scramble-checking.</div>
 
-<div class="text">  Every competitor must have google meets with an activated camera facing the competitor and a working microphone.</div>
+<div class="ruletext">  Every competitor must have google meets with an activated camera facing the competitor and a working microphone.</div>
 
-<div class="text">  The competitor is allowed to have a monitor showing the puzzle from an angle they can not see, but it may not be used as an advantage.</div>
+<div class="ruletext">  The competitor is allowed to have a monitor showing the puzzle from an angle they can not see, but it may not be used as an advantage.</div>
 
-<div class="text"> You must have read the WCA regulations <a href="https://www.worldcubeassociation.org/regulations/">Link</a> And those regulations will count unless you are told differently.</div>
+<div class="ruletext"> You must have read the WCA regulations <a href="https://www.worldcubeassociation.org/regulations/">Link</a> And those regulations will count unless you are told differently.</div>
 
 <p>spacer</p>
 
@@ -57,9 +57,9 @@
 
 <p>spacer</p>
 
-<div class="text"> There will be two main formats: A "normal" WCA competetion style format and a head to head format.</div>
+<div class="ruletext"> There will be two main formats: A "normal" WCA competetion style format and a head to head format.</div>
 
-<div class="text"> In the head to head format each competitor will take turns solving and the person with the best seed will get to do the first solve.</div>
+<div class="ruletext"> In the head to head format each competitor will take turns solving and the person with the best seed will get to do the first solve.</div>
 
 <p>spacer</p>
 
@@ -67,27 +67,27 @@
 
 <p>spacer</p>
 
-<div class="text"> The judge will tell the competitors when a new scramble is available.</div>
+<div class="ruletext"> The judge will tell the competitors when a new scramble is available.</div>
 
-<div class="text"> When the puzzle has been scrambled, the competitor must place their cube inside the cube cover with the open face pointing towards their camera.</div>
+<div class="ruletext"> When the puzzle has been scrambled, the competitor must place their cube inside the cube cover with the open face pointing towards their camera.</div>
 
-<div class="text"> If the cube is scrambled correctly the judge will say: "correct" if not the judge will say "mis-scramble".</div>
+<div class="ruletext"> If the cube is scrambled correctly the judge will say: "correct" if not the judge will say "mis-scramble".</div>
 
-<div class="text"> If the cube is scrambled incorrectly the competitor must apply at least 10 random turns to the cube, solve it and apply the scramble again.</div>
+<div class="ruletext"> If the cube is scrambled incorrectly the competitor must apply at least 10 random turns to the cube, solve it and apply the scramble again.</div>
 
-<div class="text"> When the scramble has been confirmed to be correct the competitor must fully cover the cube.</div>
+<div class="ruletext"> When the scramble has been confirmed to be correct the competitor must fully cover the cube.</div>
 
-<div class="text">When the competitor is  ready they must say: "ready" and then lift the cover. </div>
+<div class="ruletext">When the competitor is  ready they must say: "ready" and then lift the cover. </div>
 
-<div class="text"> When the competitor has lifted the cover the judge must start timing the inspection time and call out the normal WCA inspection calls.</div>
+<div class="ruletext"> When the competitor has lifted the cover the judge must start timing the inspection time and call out the normal WCA inspection calls.</div>
 
-<div class="text"> The competitor must show the judge the time for the finished solve on the google meet camera.</div>
+<div class="ruletext"> The competitor must show the judge the time for the finished solve on the google meet camera.</div>
 
-<div class="text"> The WCA regulations count for penalties.</div>
+<div class="ruletext"> The WCA regulations count for penalties.</div>
 
-<div class="text"> If the Judge cannot clearly see the entire cube after the solve is completed, the competitor must take a picture and show the judge without touching the cube.</div>
+<div class="ruletext"> If the Judge cannot clearly see the entire cube after the solve is completed, the competitor must take a picture and show the judge without touching the cube.</div>
 
-<div class="text"> The competitor must not reset the timer or touch the cube until the judge has correctly recorded the result.</div>
+<div class="ruletext"> The competitor must not reset the timer or touch the cube until the judge has correctly recorded the result.</div>
 
 <p>spacer</p>
 
@@ -95,13 +95,13 @@
 
 <p>spacer</p>
 
-<div class="text"> The judge must check that the cube is correctly scrambled. Thye will be provided with an image of the scramble. The judge only needs to check one of the cubes sides.</div>
+<div class="ruletext"> The judge must check that the cube is correctly scrambled. Thye will be provided with an image of the scramble. The judge only needs to check one of the cubes sides.</div>
 
-<div class="text"> The judge or anyone else may not tell anybody about the scramble until the competetion is over.</div>
+<div class="ruletext"> The judge or anyone else may not tell anybody about the scramble until the competetion is over.</div>
 
-<div class="text"> When the result has been determined the judge must write it down on a piece of paper.</div>
+<div class="ruletext"> When the result has been determined the judge must write it down on a piece of paper.</div>
 
-<div class="text"> When the average has been finished the judge must show the paper to the organizer so that the times can be entered.</div>
+<div class="ruletext"> When the average has been finished the judge must show the paper to the organizer so that the times can be entered.</div>
 
 
 
@@ -111,13 +111,13 @@
 
 <p>spacer</p>
 
-<div class="text"> If a malfunction occurs during the timing or verification of the solve/result the competitor(s) will get an extra attempt.</div>
+<div class="ruletext"> If a malfunction occurs during the timing or verification of the solve/result the competitor(s) will get an extra attempt.</div>
 
-<div class="text">If a timer unintentionally turns off or resets during a solve the competitor(s) will be given an extra attempt.</div>
+<div class="ruletext">If a timer unintentionally turns off or resets during a solve the competitor(s) will be given an extra attempt.</div>
 
-<div class="text">If the timer displays a number below 0.06 the competitor(s) will be given an extra attmpt.</div>
+<div class="ruletext">If the timer displays a number below 0.06 the competitor(s) will be given an extra attmpt.</div>
 
-<div class="text">In any case not covered in these rules the judge must decide if it will be an extra attempt or a DNF.</div>
+<div class="ruletext">In any case not covered in these rules the judge must decide if it will be an extra attempt or a DNF.</div>
 
 <p>spacer</p>
 
@@ -125,9 +125,9 @@
 
 <p>spacer</p>
 
-<div class="text">If the judge suspects a competitor for cheating the result will be enterd as a DNF.</div>
+<div class="ruletext">If the judge suspects a competitor for cheating the result will be enterd as a DNF.</div>
 
-<div class="text">If a competitor has cheated multiple times the organizer can ban the competitor.</div>
+<div class="ruletext">If a competitor has cheated multiple times the organizer can ban the competitor.</div>
 
 <p>spacer</p>
 <p>spacer</p>
