--- a/rules.html
+++ b/rules.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Rules</title>
+  <title>Rules</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
