--- a/rankingsbutnotreally.html
+++ b/rankingsbutnotreally.html
@@ -12,11 +12,11 @@
   <header class="BN">IN-TURN-ET CUBING</header>
   <div class="navbarpoints">
     <ul>
-      <li><a href="https://codepen.io/sircrazypaper/full/NWEqwmw">HOME</a></li>
-       <li><a href="https://codepen.io/sircrazypaper/full/OJaPmbe">ABOUT</a></li>
-      <li><a href="https://codepen.io/sircrazypaper/full/yLQYvEY">COMPETETIONS</a></li>
-      <li><a href="https://codepen.io/sircrazypaper/full/QWJyWJp">RULES</a></li>
-      <li><a href="#">RANKINGS</a></li>
+      <li><a href="https://sircrazypaper.github.io/">HOME</a></li>
+       <li><a href="https://sircrazypaper.github.io/about.html">ABOUT</a></li>
+      <li><a href="https://sircrazypaper.github.io/competetions.html">COMPETETIONS</a></li>
+      <li><a href="https://sircrazypaper.github.io/rules.html">RULES</a></li>
+      <li><a href="https://sircrazypaper.github.io/rankingsbutnotreally.html">RANKINGS</a></li>
       <li><a href="https://codepen.io/sircrazypaper/full/RwqWMbE">NEWS</a></li>
     </ul>
   </div>
