--- a/rules.html
+++ b/rules.html
@@ -16,7 +16,7 @@
        <li><a href="https://sircrazypaper.github.io/about.html">ABOUT</a></li>
       <li><a href="https://sircrazypaper.github.io/competetions.html">COMPETETIONS</a></li>
       <li><a href="https://sircrazypaper.github.io/rules.html">RULES</a></li>
-      <li><a href="https://codepen.io/sircrazypaper/full/ZEmbrVp">RANKINGS</a></li>
+      <li><a href="https://sircrazypaper.github.io/rankingsbutnotreally.html">RANKINGS</a></li>
       <li><a href="https://codepen.io/sircrazypaper/full/RwqWMbE">NEWS</a></li>
     </ul>
   </div>
