news added css shortly

--- a/comp1.html
+++ b/comp1.html
@@ -17,7 +17,7 @@
       <li><a href="https://sircrazypaper.github.io/competetions.html">COMPETETIONS</a></li>
       <li><a href="https://sircrazypaper.github.io/rules.html">RULES</a></li>
       <li><a href="https://sircrazypaper.github.io/rankingsbutnotreally.html">RANKINGS</a></li>
-      <li><a href="https://codepen.io/sircrazypaper/full/RwqWMbE">NEWS</a></li>
+      <li><a href="https://sircrazypaper.github.io/news.html">NEWS</a></li>
     </ul>
   </div>
 </nav>
