comp1 css update

--- a/comp1.html
+++ b/comp1.html
@@ -45,13 +45,13 @@
 
 <div class="headers"><center>INFORMATION</center></div>
 <p>spacer</p>
-<div class="text"><center>There is a competitor limit of 20 competitors</center></div>
-<div class="text"><center>Registration will Close: August 3rd at 12:00 AM GMT+2</center></div>
-<div class="text"><center>Date: August 13 9:30-16:25 GMT+2 (The schedule might change since we have never hosted an online comp before)</center></div>
-<div class="text"><center>An email will be sent out one of the days leading up to the competition about the final details</center></div>
-<div class="text"><center>Podiums in all events will receive diplomas by email
+<div class="compinfo"><center>There is a competitor limit of 20 competitors</center></div>
+<div class="compinfo"><center>Registration will Close: August 3rd at 12:00 AM GMT+2</center></div>
+<div class="compinfo"><center>Date: August 13 9:30-16:25 GMT+2 (The schedule might change since we have never hosted an online comp before)</center></div>
+<div class="compinfo"><center>An email will be sent out one of the days leading up to the competition about the final details</center></div>
+<div class="compinfo"><center>Podiums in all events will receive diplomas by email
 </center></div>
-<div class="text"><center>Contact us at: jk.lehmann@icloud.com
+<div class="compinfo"><center>Contact us at: jk.lehmann@icloud.com
 </center></div>
 
 <p>spacer</p>
@@ -153,15 +153,15 @@
 
 <p>spacer</p>
 
-<div class="text"><center>Register here: <a href=https://forms.gle/MVhSUa51oHWtxpu59>register!</a></center></div>
+<div class="compinfo"><center>Register here: <a href=https://forms.gle/MVhSUa51oHWtxpu59>register!</a></center></div>
 
-<div class="text"><center>Please note that if the form is not filled out correctly your registration will not count</center></div>
+<div class="compinfo"><center>Please note that if the form is not filled out correctly your registration will not count</center></div>
 
-<div class="text"><center>To cancel registration please Email us at: jk.lehmann@icloud.com</center></div>
+<div class="compinfo"><center>To cancel registration please Email us at: jk.lehmann@icloud.com</center></div>
 
-<div class="text"><center>You can only change the status of your registration by Email at: jk.lehmann@icloud.com</center></div>
+<div class="compinfo"><center>You can only change the status of your registration by Email at: jk.lehmann@icloud.com</center></div>
 
-<div class="text"><center>Please note that your registration will not be shown right away since we need to review it first, it will most likely take less than 24 hours</center></div>
+<div class="compinfo"><center>Please note that your registration will not be shown right away since we need to review it first, it will most likely take less than 24 hours</center></div>
 
 <p>spacer</p>
 <p>spacer</p>
