--- a/about.html
+++ b/about.html
@@ -30,9 +30,9 @@
 <p>spacer</p>
 <p>spacer</p>
 
-<div class="info"><center>IN-TURN-ET CUBING is an online cubing competetion featuring 3x3 head to head battles, normal competetion style solves and other fun cubing related stuff.</center></div>
+<div class="aboutinfo"><center>IN-TURN-ET CUBING is an online cubing competetion featuring 3x3 head to head battles, normal competetion style solves and other fun cubing related stuff.</center></div>
 <p>spacer</p>
-<div class="info"><center>To find out more about upcoming competetions please go to the "competions" section on this webpage.</center></div>
+<div class="aboutinfo"><center>To find out more about upcoming competetions please go to the "competions" section on this webpage.</center></div>
 
 <p>spacer</p>
 <p>spacer</p>
