--- a/competetions.html
+++ b/competetions.html
@@ -42,7 +42,7 @@
 <p>spacer</p>
 <p>spacer</p>
 
-<div class="link">IN-TURN-ET CUBING I><a href="https://sircrazypaper.github.io/comp1.html"></a></div>
+<div class="link">IN-TURN-ET CUBING I<a href="https://sircrazypaper.github.io/comp1.html"></a></div>
 
 
 
