--- a/competetions.html
+++ b/competetions.html
@@ -42,14 +42,16 @@
 <p>spacer</p>
 <p>spacer</p>
 
-<div class="link">IN-TURN-ET CUBING I<a href="https://sircrazypaper.github.io/comp1.html"></a></div>
+<div class="compinfo2"> August 13 2023 <a class="link" href="https://sircrazypaper.github.io/comp1.html">IN-TURN-ET CUBING I</a></div>
 
 
-
+<p>spacer</p>
+<p>spacer</p>
 
    <p style="text-align:center;">
 <img src="https://raw.githubusercontent.com/sircrazypaper/IN-TURN-ET_CUBING/main/Screenshot%202023-06-04%20at%2018.27.45.png" alt="Logo" width="350">  </p>
 
+  <p>spacer</p>
   <p>spacer</p>
 <!-- partial -->
 
