--- a/comp1.html
+++ b/comp1.html
@@ -185,7 +185,7 @@
   <tr>
     <td>Anton Lerstrup Hylleberg</td>
     <td>3x3, 2x2, 4x4, Pyraminx</td>
-    <td>DenmarkM</td>
+    <td>Denmark</td>
   </tr>
     <tr>
       <td>Bertram Emil Nørding</td>
