Typo fixed+extra stuff

--- a/competitions.html
+++ b/competitions.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Competetions</title>
+  <title>Competitions</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -14,7 +14,7 @@
     <ul>
       <li><a href="https://sircrazypaper.github.io/">HOME</a></li>
        <li><a href="https://sircrazypaper.github.io/about.html">ABOUT</a></li>
-      <li><a href="https://sircrazypaper.github.io/competetions.html">COMPETETIONS</a></li>
+      <li><a href="https://sircrazypaper.github.io/competitions.html">COMPETITIONS</a></li>
       <li><a href="https://sircrazypaper.github.io/rules.html">RULES</a></li>
       <li><a href="https://sircrazypaper.github.io/rankingsbutnotreally.html">RANKINGS</a></li>
       <li><a href="https://sircrazypaper.github.io/news.html">NEWS</a></li>
@@ -27,7 +27,7 @@
 <p>spacer</p>
 <p>spacer</p>
 
-<h><center>COMPETETIONS</center></h>
+<h><center>COMPETITIONS</center></h>
 
 <div class="info">
 
@@ -36,7 +36,7 @@
 
 
 
-<center>This is the page where you can find competetions and sign up for them. We will try to host a competetion every 1-3 months. Feel free to sign up for one!</center></div>
+<center>This is the page where you can find competitions and sign up for them. We will try to host a competition every 1-3 months. Feel free to sign up for one!</center></div>
 
 <p>spacer</p>
 <p>spacer</p>
