--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <ul>
       <li><a href="https://sircrazypaper.github.io/">HOME</a></li>
        <li><a href="https://sircrazypaper.github.io/about.html">ABOUT</a></li>
-      <li><a href="https://sircrazypaper.github.io/competetions.html">COMPETETIONS</a></li>
+      <li><a href="https://sircrazypaper.github.io/competitions.html">COMPETITIONS</a></li>
       <li><a href="https://sircrazypaper.github.io/rules.html">RULES</a></li>
       <li><a href="https://sircrazypaper.github.io/rankingsbutnotreally.html">RANKINGS</a></li>
       <li><a href="https://sircrazypaper.github.io/news.html">NEWS</a></li>
@@ -32,7 +32,7 @@
 <p style="text-align:center;">
 <img src="https://raw.githubusercontent.com/sircrazypaper/IN-TURN-ET_CUBING/main/Screenshot%202023-06-04%20at%2018.27.45.png" alt="Logo" width="600">  </p>
 
-<h class="text"><center>This is the official website for the online cubing competetion IN-TURN-ET CUBING</center></h>
+<h class="text"><center>This is the official website for the online cubing competition IN-TURN-ET CUBING</center></h>
 
 <p>spacer</p>
 
