--- a/news.html
+++ b/news.html
@@ -14,7 +14,7 @@
     <ul>
       <li><a href="https://sircrazypaper.github.io/">HOME</a></li>
        <li><a href="https://sircrazypaper.github.io/about.html">ABOUT</a></li>
-      <li><a href="https://sircrazypaper.github.io/competions.html">COMPETETIONS</a></li>
+      <li><a href="https://sircrazypaper.github.io/competitions.html">COMPETITIONS</a></li>
       <li><a href="https://sircrazypaper.github.io/rules.html">RULES</a></li>
       <li><a href="https://sircrazypaper.github.io/rankingsbutnotreally.html">RANKINGS</a></li>
       <li><a href="https://sircrazypaper.github.io/news.html">NEWS</a></li>
@@ -33,7 +33,7 @@
 <p>spacer</p>
 <p>spacer</p>
 
-<div class="info"><center>The news section is the section where we can update you on changes in the website, new competetions, records and much more.</center></div>
+<div class="info"><center>The news section is the section where we can update you on changes in the website, new competitions, records and much more.</center></div>
 
 <p>spacer</p>
 
@@ -49,7 +49,7 @@
 
 <p>spacer</p>
 
-<div class='news'><center>We have finally released the webite for IN-TURN-ER CUBING! We have spent a long time developing it and it is finally here. There are many functions already and we arent even done developing the website yet! If you have any ideas for extra features or updates feel free to email us at jk.lehmann@icloud.com. We hope that you will attend many of our competetions and have lots of fun cubing with us. See you later.</center></div>
+<div class='news'><center>We have finally released the webite for IN-TURN-ER CUBING! We have spent a long time developing it and it is finally here. There are many functions already and we arent even done developing the website yet! If you have any ideas for extra features or updates feel free to email us at jk.lehmann@icloud.com. We hope that you will attend many of our competitions and have lots of fun cubing with us. See you later.</center></div>
 
 <p>spacer</p>
 <p>spacer</p>
