--- a/rankingsbutnotreally.html
+++ b/rankingsbutnotreally.html
@@ -14,7 +14,7 @@
     <ul>
       <li><a href="https://sircrazypaper.github.io/">HOME</a></li>
        <li><a href="https://sircrazypaper.github.io/about.html">ABOUT</a></li>
-      <li><a href="https://sircrazypaper.github.io/competetions.html">COMPETETIONS</a></li>
+      <li><a href="https://sircrazypaper.github.io/competitions.html">COMPETITIONS</a></li>
       <li><a href="https://sircrazypaper.github.io/rules.html">RULES</a></li>
       <li><a href="https://sircrazypaper.github.io/rankingsbutnotreally.html">RANKINGS</a></li>
       <li><a href="https://sircrazypaper.github.io/news.html">NEWS</a></li>
@@ -27,7 +27,7 @@
 <p>spacer</p>
 <p>spacer</p>
 
-<div class="text"><center>This page does not exist because we have not hosted any competetions before so we can't rank anyone. Please go to a different tab. Happy cubing!</center></div>
+<div class="text"><center>This page does not exist because we have not hosted any competitions before so we can't rank anyone. Please go to a different tab. Happy cubing!</center></div>
 
 <p>spacer</p>
 <p>spacer</p>
