--- a/rules.html
+++ b/rules.html
@@ -14,7 +14,7 @@
     <ul>
       <li><a href="https://sircrazypaper.github.io/">HOME</a></li>
        <li><a href="https://sircrazypaper.github.io/about.html">ABOUT</a></li>
-      <li><a href="https://sircrazypaper.github.io/competetions.html">COMPETETIONS</a></li>
+      <li><a href="https://sircrazypaper.github.io/competitions.html">COMPETITIONS</a></li>
       <li><a href="https://sircrazypaper.github.io/rules.html">RULES</a></li>
       <li><a href="https://sircrazypaper.github.io/rankingsbutnotreally.html">RANKINGS</a></li>
       <li><a href="https://sircrazypaper.github.io/news.html">NEWS</a></li>
@@ -39,7 +39,7 @@
 
 <p>spacer</p>
 
-<div class="ruletext">Every competitor must have a puzzle that is WCA legal for the event that they are competing in unless they are told differntly on the competetion info page.</div>
+<div class="ruletext">Every competitor must have a puzzle that is WCA legal for the event that they are competing in unless they are told differntly on the competition info page.</div>
 <div class="ruletext">  Every competitor must have an opaque box with an open side to cover the cube during scramble-checking and before inspection. Example: hard box cube packaging.</div>
 <div class="ruletext">  Every competitor must use a speedstacks gen4, gen5, GAN, or QiYi Timer to time their results.</div>
 <div class="ruletext">  The judge must have a device that can act as a stopwatch for timing inspection.</div>
@@ -57,9 +57,11 @@
 
 <p>spacer</p>
 
-<div class="ruletext"> There will be two main formats: A "normal" WCA competetion style format and a head to head format.</div>
+<div class="ruletext"> There will be two main formats: A "normal" WCA competition style format and a head to head format.</div>
 
 <div class="ruletext"> In the head to head format each competitor will take turns solving and the person with the best seed will get to do the first solve.</div>
+
+<div class="ruletext"> In the head to head format the person with the best average proceeds to the next head to head round.</div>
 
 <p>spacer</p>
 
@@ -97,7 +99,7 @@
 
 <div class="ruletext"> The judge must check that the cube is correctly scrambled. Thye will be provided with an image of the scramble. The judge only needs to check one of the cubes sides.</div>
 
-<div class="ruletext"> The judge or anyone else may not tell anybody about the scramble until the competetion is over.</div>
+<div class="ruletext"> The judge or anyone else may not tell anybody about the scramble until the competition is over.</div>
 
 <div class="ruletext"> When the result has been determined the judge must write it down on a piece of paper.</div>
 
