--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
     <ul>
       <li><a href="https://sircrazypaper.github.io/">HOME</a></li>
        <li><a href="https://sircrazypaper.github.io/about.html">ABOUT</a></li>
-      <li><a href="https://sircrazypaper.github.io/competetions.html">COMPETETIONS</a></li>
+      <li><a href="https://sircrazypaper.github.io/competitions.html">COMPETITIONS</a></li>
       <li><a href="https://sircrazypaper.github.io/rules.html">RULES</a></li>
       <li><a href="https://sircrazypaper.github.io/rankingsbutnotreally.html">RANKINGS</a></li>
       <li><a href="https://sircrazypaper.github.io/news.html">NEWS</a></li>
@@ -30,9 +30,9 @@
 <p>spacer</p>
 <p>spacer</p>
 
-<div class="aboutinfo"><center>IN-TURN-ET CUBING is an online cubing competetion featuring 3x3 head to head battles, normal competetion style solves and other fun cubing related stuff.</center></div>
+<div class="aboutinfo"><center>IN-TURN-ET CUBING is an online cubing competition featuring 3x3 head to head battles, normal competition style solves and other fun cubing related stuff.</center></div>
 <p>spacer</p>
-<div class="aboutinfo"><center>To find out more about upcoming competetions please go to the "competions" section on this webpage.</center></div>
+<div class="aboutinfo"><center>To find out more about upcoming competitions please go to the "competions" section on this webpage.</center></div>
 
 <p>spacer</p>
 <p>spacer</p>
