--- a/comp1.html
+++ b/comp1.html
@@ -14,7 +14,7 @@
     <ul>
       <li><a href="https://sircrazypaper.github.io/">HOME</a></li>
        <li><a href="https://sircrazypaper.github.io/about.html">ABOUT</a></li>
-      <li><a href="https://sircrazypaper.github.io/competetions.html">COMPETETIONS</a></li>
+      <li><a href="https://sircrazypaper.github.io/competitions.html">COMPETITIONS</a></li>
       <li><a href="https://sircrazypaper.github.io/rules.html">RULES</a></li>
       <li><a href="https://sircrazypaper.github.io/rankingsbutnotreally.html">RANKINGS</a></li>
       <li><a href="https://sircrazypaper.github.io/news.html">NEWS</a></li>
