--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
 
 <div class="aboutinfo"><center>IN-TURN-ET CUBING is an online cubing competition featuring 3x3 head to head battles, normal competition style solves and other fun cubing related stuff.</center></div>
 <p>spacer</p>
-<div class="aboutinfo"><center>To find out more about upcoming competitions please go to the "competions" section on this webpage.</center></div>
+<div class="aboutinfo"><center>To find out more about upcoming competitions please go to the "competitions" section on this webpage.</center></div>
 
 <p>spacer</p>
 <p>spacer</p>
