--- a/news.html
+++ b/news.html
@@ -49,7 +49,7 @@
 
 <p>spacer</p>
 
-<div class='news'><center>We have finally released the webite for IN-TURN-ER CUBING! We have spent a long time developing it and it is finally here. There are many functions already and we arent even done developing the website yet! If you have any ideas for extra features or updates feel free to email us at jk.lehmann@icloud.com. We hope that you will attend many of our competitions and have lots of fun cubing with us. See you later.</center></div>
+<div class='news'><center>On June 10 we finally released the webite for IN-TURN-ER CUBING! We have spent a long time developing it and it is finally here. There are many functions already and we arent even done developing the website yet! If you have any ideas for extra features or updates feel free to email us at jk.lehmann@icloud.com. We hope that you will attend many of our competitions and have lots of fun cubing with us. See you later.</center></div>
 
 <p>spacer</p>
 <p>spacer</p>
