--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
       <li><a href="https://sircrazypaper.github.io/rules.html">RULES</a></li>
       <li><a href="https://sircrazypaper.github.io/rankingsbutnotreally.html">RANKINGS</a></li>
       <li><a href="https://sircrazypaper.github.io/news.html">NEWS</a></li>
+      <p class=sacer>spacer</p>
     </ul>
   </div>
 </nav>
