--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
       <li><a href="https://sircrazypaper.github.io/rules.html">RULES</a></li>
       <li><a href="https://sircrazypaper.github.io/rankingsbutnotreally.html">RANKINGS</a></li>
       <li><a href="https://sircrazypaper.github.io/news.html">NEWS</a></li>
+      <p class=sacer>spacer</p>
+
     </ul>
   </div>
 </nav>
