Update of the rules

--- a/news.html
+++ b/news.html
@@ -46,6 +46,21 @@
 <p>spacer</p>
 <p>spacer</p>
 
+<div class='newstitle'><center>A small update to the rules</center></div>
+
+<p>spacer</p>
+
+<div class='news'><center>On the 3rd of July we updated the formats section of our rules to make it easier to understand how the different formats work. We also fixed a typo and updated the procedure section to make it more compatible with the head to head format. We hope that this will help people understand the rules better.</center></div>
+
+<p>spacer</p>
+<p>spacer</p>
+<p>spacer</p>
+<p>spacer</p>
+<!-- partial -->
+
+</body>
+</html>
+
 <div class='newstitle'><center>Website release!</center></div>
 
 <p>spacer</p>
