--- a/rules.html
+++ b/rules.html
@@ -50,7 +50,7 @@
 
 <div class="ruletext">  The competitor is allowed to have a monitor showing the puzzle from an angle they can not see, but it may not be used as an advantage.</div>
 
-<div class="ruletext"> You must have read the WCA regulations <a href="https://www.worldcubeassociation.org/regulations/">Link</a> And those regulations will count unless you are told differently.</div>
+<div class="ruletext"> You must have read the WCA regulations <a href="https://www.worldcubeassociation.org/regulations/">Link</a> And those regulations will count unless you are told differently by a delegate or in these rules.</div>
 
 <p>spacer</p>
 
@@ -58,9 +58,19 @@
 
 <p>spacer</p>
 
-<div class="ruletext"> There will be two main formats: A "normal" WCA competition style format and a head to head format.</div>
+<div class="ruletext"> There will be three main formats: A "normal" WCA competition style format, seeding rounds and a head to head format.</div>
 
-<div class="ruletext"> In the head to head format each competitor will take turns solving and the person with the best seed will get to do the first solve.</div>
+<div class="ruletext"> In a "normal" WCA competetion format a competitor will be solving alone with an assigned judge, both following the rules for the correct procedure.</div>
+
+<div class="ruletext"> A "seeding round" is held before a head to head tournament and will have the same procedure as the "normal" WCA competetion format. </div>
+
+<div class="ruletext"> The seeding round will eliminate the number of competitors that must be eliminated and seed the remaining competitors according to their average in that round.</div>
+
+<div class="ruletext"> The competiors that are not eliminated will proceed to the head to head rounds. </div>
+
+<div class="ruletext"> In the head to head format the competitor with the best seed will choose which competitor does the first solve.</div>
+
+<div class="ruletext"> In the head to head format each competitor will take turns solving.</div>
 
 <div class="ruletext"> In the head to head format the person with the best average proceeds to the next head to head round.</div>
 
@@ -92,19 +102,21 @@
 
 <div class="ruletext"> The competitor must not reset the timer or touch the cube until the judge has correctly recorded the result.</div>
 
+<div class="ruletext"> In the head to head format all of the rules provided above will still count but with the judge has to judge both competitors (the two competitors must still take turns to do their solves).</div>
+
 <p>spacer</p>
 
 <h2>Judging</h2>
 
 <p>spacer</p>
 
-<div class="ruletext"> The judge must check that the cube is correctly scrambled. Thye will be provided with an image of the scramble. The judge only needs to check one of the cubes sides.</div>
+<div class="ruletext"> The judge must check that the cube is correctly scrambled. They will be provided with an image of the scramble. The judge only needs to check one of the cubes sides.</div>
 
 <div class="ruletext"> The judge or anyone else may not tell anybody about the scramble until the competition is over.</div>
 
 <div class="ruletext"> When the result has been determined the judge must write it down on a piece of paper.</div>
 
-<div class="ruletext"> When the average has been finished the judge must show the paper to the organizer so that the times can be entered.</div>
+<div class="ruletext"> When the average has been finished the judge must show the paper to the delegate so that the times can be entered.</div>
 
 
 
