--- a/rules.html
+++ b/rules.html
@@ -102,6 +102,8 @@
 
 <div class="ruletext"> The competitor must not reset the timer or touch the cube until the judge has correctly recorded the result.</div>
 
+<div class="ruletext"> Only the competitor solving and the judge are allowed to have their microphone turned on, everyone else must be muted!</div>
+
 <div class="ruletext"> In the head to head format all of the rules provided above will still count but with the judge has to judge both competitors (the two competitors must still take turns to do their solves).</div>
 
 <p>spacer</p>
