added delegate in comp1

--- a/comp1.html
+++ b/comp1.html
@@ -49,6 +49,7 @@
 <div class="compinfo"><center>There is a competitor limit of 20 competitors</center></div>
 <div class="compinfo"><center>Registration will Close: August 3rd at 12:00 AM GMT+2</center></div>
 <div class="compinfo"><center>The events will be: 3x3, 2x2, 4x4 and Pyraminx</center></div>
+<div class="compinfo"><center>Delegate/organizer: Jonathan Karniala Lehmann</center></div>
 <div class="compinfo"><center>Date: August 13 9:30-16:25 GMT+2 (The schedule might change since we have never hosted an online comp before)</center></div>
 <div class="compinfo"><center>An email will be sent out one of the days leading up to the competition about the final details</center></div>
 <div class="compinfo"><center>Podiums in all events will receive diplomas by email
