--- a/comp1.html
+++ b/comp1.html
@@ -18,7 +18,7 @@
       <li><a href="https://sircrazypaper.github.io/rules.html">RULES</a></li>
       <li><a href="https://sircrazypaper.github.io/rankingsbutnotreally.html">RANKINGS</a></li>
       <li><a href="https://sircrazypaper.github.io/news.html">NEWS</a></li>
-      <p class=sacer>spacer</p>
+      <p class=spacer>spacer</p>
     </ul>
   </div>
 </nav>
