Comp date moved from aug13-aug20

--- a/competitions.html
+++ b/competitions.html
@@ -18,7 +18,7 @@
       <li><a href="https://sircrazypaper.github.io/rules.html">RULES</a></li>
       <li><a href="https://sircrazypaper.github.io/rankingsbutnotreally.html">RANKINGS</a></li>
       <li><a href="https://sircrazypaper.github.io/news.html">NEWS</a></li>
-      <p class=sacer>spacer</p>
+      <p class=spacer>spacer</p>
     </ul>
   </div>
 </nav>
@@ -43,7 +43,7 @@
 <p>spacer</p>
 <p>spacer</p>
 
-<div class="compinfo2"> August 13 2023 <a class="link" href="https://sircrazypaper.github.io/comp1.html">IN-TURN-ET CUBING I</a></div>
+<div class="compinfo2"> August 20 2023 <a class="link" href="https://sircrazypaper.github.io/comp1.html">IN-TURN-ET CUBING I</a></div>
 
 
 <p>spacer</p>
