--- a/news.html
+++ b/news.html
@@ -46,6 +46,17 @@
 <p>spacer</p>
 <p>spacer</p>
 
+<div class='newstitle'><center>An update to the rules about judging</center></div>
+
+<p>spacer</p>
+
+<div class='news'><center>On The 8th of July 2023 a new section called "Personal judging" has been added to the rules. It provides the option that competitors can time their own inspection, and some people like that better. We hope that this will make some peoples results better. Happy cubing!</center></div>
+
+<p>spacer</p>
+<p>spacer</p>
+<p>spacer</p>
+<p>spacer</p>
+
 <div class='newstitle'><center>A small update to the rules</center></div>
 
 <p>spacer</p>
@@ -58,8 +69,7 @@
 <p>spacer</p>
 <!-- partial -->
 
-</body>
-</html>
+
 
 <div class='newstitle'><center>Website release!</center></div>
 
