--- a/rules.html
+++ b/rules.html
@@ -126,17 +126,17 @@
 
 <p>spacer</p>
 
-<div class="ruletext"> A competitor may choose to not use the judge assigned for inspection time, in that case the assigned judge must be muted (unless the competitor says so).</div>
+<div class="ruletext"> A competitor may choose to not use the judge assigned for inspection time, in that case the originally assigned judge must be muted (unless the competitor says so).</div>
 
-<div class="ruletext"> The competitor must use a different inspection timer like a phone, computer or a person E.G. a friend.</div>
+<div class="ruletext"> The competitor must use a different inspection timer like a phone, computer or a person E.G. a friend, that calls out WCA inspection calls.</div>
 
-<div class="ruletext"> The assigned judge must check if the cube is correctly scrambled, if it is correct the judge must give a "thumbs up" if not the judge must give a "thumbs down" the competitor must do as stated in the "procedure" section.</div>
+<div class="ruletext"> The originally assigned judge must check if the cube is correctly scrambled, if it is correct the judge must give a "thumbs up" if not the judge must give a "thumbs down" the competitor must do as stated in the "procedure" section.</div>
 
-<div class="ruletext"> The assigned judge must still look at the cube and timer to verify the result, write the result down on a piece of paper.</div>
+<div class="ruletext"> The originally assigned judge must still look at the cube and timer to verify the result, write the result down on a piece of paper.</div>
 
-<div class="ruletext"> The assigned judge must also time the inspection without calling the WCA inspection calls.</div>
+<div class="ruletext"> The originally assigned judge must also time the inspection without calling the WCA inspection calls.</div>
 
-<div class="ruletext"> If the competitor has broken the WCA inspection time rules the assinged judge must wait until the solve is finished, tell the competitor that they overinspected and then change the result to fit the correct penalty.</div>
+<div class="ruletext"> If the competitor has broken the WCA inspection time rules the originally assinged judge must wait until the solve is finished, tell the competitor that they overinspected and then change the result to fit the correct penalty.</div>
 
 <div class="ruletext"> When the average has been finished the judge must show the paper to the delegate so that the times can be entered.</div>
 
