--- a/Person2022LEHM02.html
+++ b/Person2022LEHM02.html
@@ -116,6 +116,8 @@
   </tr>
   </center></table>
 
+  <p>spacer</p>
+
 <div class="eventatcomp">2x2x2 but not gonna fill out</div>
 
 <table><center>
