--- a/competitors.html
+++ b/competitors.html
@@ -2,12 +2,13 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>Rankings</title>
+  <title>Competitors</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
 <body>
-<!-- partial:index.partial.html -->
+
+
 <nav class="navbar">
   <header class="BN">IN-TURN-ET CUBING</header>
   <div class="navbarpoints">
@@ -26,17 +27,29 @@
 
 <p>spacer</p>
 <p>spacer</p>
-<p>spacer</p>
-<p>spacer</p>
 
-<div class="text"><center>This page does not exist because we have not hosted any competitions before so we can't rank anyone. Please go to a different tab. Happy cubing!</center></div>
+<h><center>COMPETITORS</center></h>
 
 <p>spacer</p>
 <p>spacer</p>
+<p>spacer</p>
 
-<p style="text-align:center;">
-<img src="https://raw.githubusercontent.com/sircrazypaper/IN-TURN-ET_CUBING/main/Screenshot%202023-06-04%20at%2018.27.45.png" alt="Logo" width="350">  </p>
-<!-- partial -->
+<div class="competitorspageinfo"><center>This is the page where you can find everybody who has competed in an IN-TURN-ET CUBING competetion and see all of their results and PBs</center></div>
+
+<p>spacer</p>
+<p>spacer</p>
+
+<!--
+
+<div class="competitors"><a href="#">Somebody</a></div>
+
+<div class="competitors"><a href="#">Somebody else</a></div>
+
+-->
+
+<div class="info">There are no competitors to list</div>
+
+<p>spacer</p>
 
 </body>
 </html>
