--- a/Person2022LEHM02.html
+++ b/Person2022LEHM02.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>IN-TURN-ET CUBING Jonathan Karniala Lehmann</title>
+  <title>Jonathan Karniala Lehmann</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
