--- a/rules.html
+++ b/rules.html
@@ -18,6 +18,7 @@
       <li><a href="https://sircrazypaper.github.io/rules.html">RULES</a></li>
       <li><a href="https://sircrazypaper.github.io/rankingsbutnotreally.html">RANKINGS</a></li>
       <li><a href="https://sircrazypaper.github.io/news.html">NEWS</a></li>
+      <li><a href="https://sircrazypaper.github.io/competitors.html">COMPETITORS</a></li>
       <p class=sacer>spacer</p>
     </ul>
   </div>
