--- a/competitors.html
+++ b/competitors.html
@@ -37,6 +37,11 @@
 <div class="competitorspageinfo"><center>This is the page where you can find everybody who has competed in an IN-TURN-ET CUBING competetion and see all of their results and PBs</center></div>
 
 <p>spacer</p>
+
+<p style="text-align:center;">
+<img src="https://raw.githubusercontent.com/sircrazypaper/IN-TURN-ET_CUBING/main/Screenshot%202023-06-04%20at%2018.27.45.png" alt="Logo" width="300">  </p>
+
+<p>spacer</p>
 <p>spacer</p>
 
 <!--
