--- a/news.html
+++ b/news.html
@@ -47,6 +47,17 @@
 <p>spacer</p>
 <p>spacer</p>
 
+<div class='newstitle'><center>We added a competitors list!</center></div>
+
+<p>spacer</p>
+
+<div class='news'><center>On The 13th of July 2023 we added a competitors section in this website, it will feature a complete list of every single IN-TURN-ET CUBING competitor and all of their results and some other fun statistics. But since nobody has competed yet we dont have anything to add there yet so it is empty but it wont be empty for long. Happy cubing!</center></div>
+
+<p>spacer</p>
+<p>spacer</p>
+<p>spacer</p>
+<p>spacer</p>
+
 <div class='newstitle'><center>An update to the rules about judging</center></div>
 
 <p>spacer</p>
