--- a/comp1.html
+++ b/comp1.html
@@ -175,6 +175,17 @@
 <p>spacer</p>
 <p>spacer</p>
 
+<div class="headers"><center>GROUPS</center></div>
+
+<p>spacer</p>
+
+<div class="compinfo"><center><a href="https://sircrazypaper.github.io/groups.html">Groups</a></center></div>
+
+<div class="compinfo"><center>Everybody must judge and compete at their assigned places and times for the competetion run smoothly.</center></div>
+
+<p>spacer</p>
+<p>spacer</p>
+
 <div class="headers"><center>COMPETITORS</center></div>
 
 <p>spacer</p>
