--- a/groups.html
+++ b/groups.html
@@ -40,7 +40,7 @@
 <p>spacer</p>
 <p>spacer</p>
 
-<a href='#'>
+<a href='https://sircrazypaper.github.io/g2022LUCA01.html'>
    <button class="gbutton">
       Alfred Anthony Riise Lucas
    </button>
@@ -48,7 +48,7 @@
 
 <p>spacer</p>
 
-<a href='#'>
+<a href='https://sircrazypaper.github.io/g2022HYLL01.html'>
    <button class="gbutton">
       Anton Lerstrup Hylleberg
    </button>
@@ -56,7 +56,7 @@
 
 <p>spacer</p>
 
-<a href='#'>
+<a href='https://sircrazypaper.github.io/gbertramemilnørding.html'>
    <button class="gbutton">
       Bertram Emil Nørding
    </button>
@@ -64,7 +64,7 @@
 
 <p>spacer</p>
 
-<a href='#'>
+<a href='https://sircrazypaper.github.io/g2022VALD10.html'>
    <button class="gbutton">
       Diego Spallino Valderrama
    </button>
@@ -72,7 +72,7 @@
 
 <p>spacer</p>
 
-<a href='#'>
+<a href='https://sircrazypaper.github.io/g2022HAVS01.html'>
    <button class="gbutton">
       Emil Engberg Havsteen
    </button>
@@ -80,7 +80,7 @@
 
 <p>spacer</p>
 
-<a href='#'>
+<a href='https://sircrazypaper.github.io/2022LEHM02.html'>
    <button class="gbutton">
 Jonathan Karniala Lehmann
    </button>
@@ -88,7 +88,7 @@ Jonathan Karniala Lehmann
 
 <p>spacer</p>
 
-<a href='#'>
+<a href='https://sircrazypaper.github.io/2022MULB02.html'>
    <button class="gbutton">
 Zacharias Mulbjerg
    </button>
