--- a/groups.html
+++ b/groups.html
@@ -80,7 +80,7 @@
 
 <p>spacer</p>
 
-<a href='https://sircrazypaper.github.io/2022LEHM02.html'>
+<a href='https://sircrazypaper.github.io/g2022LEHM02.html'>
    <button class="gbutton">
 Jonathan Karniala Lehmann
    </button>
