--- a/groups.html
+++ b/groups.html
@@ -88,7 +88,7 @@ Jonathan Karniala Lehmann
 
 <p>spacer</p>
 
-<a href='https://sircrazypaper.github.io/2022MULB02.html'>
+<a href='https://sircrazypaper.github.io/g2022MULB02.html'>
    <button class="gbutton">
 Zacharias Mulbjerg
    </button>
