--- a/inturnetcubingilive.html
+++ b/inturnetcubingilive.html
@@ -46,7 +46,7 @@
 <p>spacer</p>
 
 
-   <a href="#" class="lbutton">
+   <a href="https://sircrazypaper.github.io/inturnetcubingilive2x2r1.html" class="lbutton">
     2x2 First round<div>9:50-10:20</div>
   </a>
 
