--- a/inturnetcubingilivepyrar1.html
+++ b/inturnetcubingilivepyrar1.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>IN-TURN-ET CUBING I Live 2x2 First round</title>
+  <title>IN-TURN-ET CUBING I Live Pyraminx First round</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
@@ -32,7 +32,7 @@
 
 <p>spacer</p>
 
-<div class="lcompheader">3x3 Seeding round</div>
+<div class="lcompheader">Pyraminx First round</div>
 
 <table><center>
   <tr>
@@ -63,18 +63,6 @@
   <tr>
     <td></td>
     <td>Anton Lerstrup Hylleberg</td>
-    <td>Denmark</td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-    <td></td>
-  </tr>
-  <tr>
-    <td></td>
-    <td>Bertram Emil Nørding</td>
     <td>Denmark</td>
     <td></td>
     <td></td>
