--- a/inturnetcubingilive.html
+++ b/inturnetcubingilive.html
@@ -56,7 +56,7 @@
     3x3 Seeding round<div>10:20-11:10</div>
 </a>
 
-<a href="#" class="lbutton">
+<a href="https://sircrazypaper.github.io/inturnetcubingilivepyrar1.html" class="lbutton">
     Pyraminx First round<div>11:10-11:40</div>
 </a>
 
