--- a/inturnetcubingilive.html
+++ b/inturnetcubingilive.html
@@ -76,7 +76,7 @@
     Pyraminx Final<div>14:25-14:45</div>
 </a>
 
-<a href="#" class="lbutton">
+<a href="https://sircrazypaper.github.io/inturnetcubingilive4x4r1.html" class="lbutton">
     4x4 Final<div>14:45-16:00</div>
 </a>
 
