--- a/comp1.html
+++ b/comp1.html
@@ -16,6 +16,7 @@
        <li><a href="https://sircrazypaper.github.io/about.html">ABOUT</a></li>
       <li><a href="https://sircrazypaper.github.io/competitions.html">COMPETITIONS</a></li>
       <li><a href="https://sircrazypaper.github.io/rules.html">RULES</a></li>
+      <li><a href="https://sircrazypaper.github.io/livehome.html">LIVE</a></li>
       <li><a href="https://sircrazypaper.github.io/rankingsbutnotreally.html">RANKINGS</a></li>
       <li><a href="https://sircrazypaper.github.io/competitors.html">COMPETITORS</a></li>
       <li><a href="https://sircrazypaper.github.io/news.html">NEWS</a></li>
@@ -175,13 +176,15 @@
 <p>spacer</p>
 <p>spacer</p>
 
-<div class="headers"><center>GROUPS</center></div>
+<div class="headers"><center>GROUPS and LIVE RESULTS</center></div>
 
 <p>spacer</p>
 
 <div class="compinfo"><center><a href="https://sircrazypaper.github.io/groups.html">Groups</a></center></div>
 
 <div class="compinfo"><center>Everybody must judge and compete at their assigned places and times for the competetion run smoothly.</center></div>
+
+<div class="compinfo"><center>Live results can be found <a href="https://sircrazypaper.github.io/inturnetcubingilive.html">here</a>!</center></div>
 
 <p>spacer</p>
 <p>spacer</p>
