--- a/news.html
+++ b/news.html
@@ -16,6 +16,7 @@
        <li><a href="https://sircrazypaper.github.io/about.html">ABOUT</a></li>
       <li><a href="https://sircrazypaper.github.io/competitions.html">COMPETITIONS</a></li>
       <li><a href="https://sircrazypaper.github.io/rules.html">RULES</a></li>
+      <li><a href="https://sircrazypaper.github.io/livehome.html">LIVE</a></li>
       <li><a href="https://sircrazypaper.github.io/rankingsbutnotreally.html">RANKINGS</a></li>
       <li><a href="https://sircrazypaper.github.io/competitors.html">COMPETITORS</a></li>
       <li><a href="https://sircrazypaper.github.io/news.html">NEWS</a></li>
@@ -41,6 +42,17 @@
 
  <p style="text-align:center;">
 <img src="https://raw.githubusercontent.com/sircrazypaper/IN-TURN-ET_CUBING/main/Screenshot%202023-06-04%20at%2018.27.45.png" alt="Logo" width="400">  </p>
+
+<p>spacer</p>
+<p>spacer</p>
+<p>spacer</p>
+<p>spacer</p>
+
+<div class='newstitle'><center>You can now view live results from a competetion!</center></div>
+
+<p>spacer</p>
+
+<div class='news'><center>On The 14th of July 2023 we added a function that lets you view yours and others results live from a specific competetion. It took a while to develop and we are very satisfied with the result and hope that you are to. Happy cubing!</center></div>
 
 <p>spacer</p>
 <p>spacer</p>
