--- a/g2022LUCA01.html
+++ b/g2022LUCA01.html
@@ -20,6 +20,7 @@
        <li><a href="https://sircrazypaper.github.io/about.html">ABOUT</a></li>
       <li><a href="https://sircrazypaper.github.io/competitions.html">COMPETITIONS</a></li>
       <li><a href="https://sircrazypaper.github.io/rules.html">RULES</a></li>
+      <li><a href="https://sircrazypaper.github.io/livehome.html">LIVE</a></li>
       <li><a href="https://sircrazypaper.github.io/rankingsbutnotreally.html">RANKINGS</a></li>
       <li><a href="https://sircrazypaper.github.io/competitors.html">COMPETITORS</a></li>
       <li><a href="https://sircrazypaper.github.io/news.html">NEWS</a></li>
